# rier

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: images.rs  triangle.rs
src/: camera.rs  graphics.rs  lib.rs  mesh.rs  transform.rs  types.rs
tests/: display.rs  transform.rs
